--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,13 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 bcrypt>=4.1.2
 
-# HTTP client for external APIs
+# HTTP client for external APIs and web scraping
 httpx>=0.25.2
+beautifulsoup4>=4.12.2
+lxml>=4.9.3
+
+# Email validation for user models
+email-validator>=2.0.0
 
 # File processing
 PyPDF2>=3.0.1
